# ProyectoCompi

./: .gitignore  CMakeLists.txt  Makefile  README.md  TypeChecker.cpp  TypeChecker.h  a.out  ast.cpp  ast.h  debugger.h  main.cpp  parser.cpp  parser.h  run_all_inputs.py  scanner.cpp  scanner.h  semantic_types.h  token.cpp  token.h  visitor.cpp  visitor.h
backend/: a.py  requirements.txt
backend/app/: compiler_service.py  main.py  models.py
compiler_src/: TypeChecker.cpp  TypeChecker.h  ast.cpp  ast.h  debugger.h  environment.h  main.cpp  parser.cpp  parser.h  run_all_inputs.py  scanner.cpp  scanner.h  semantic_types.h  token.cpp  token.h  visitor.cpp  visitor.h
compiler_src/inputs/: input1.txt  input1_stack.json  input1_stack.json.asm.json  input2.txt  input2_stack.json  input2_stack.json.asm.json  input3.txt  input3_stack.json  input3_stack.json.asm.json  input4.txt  input4_stack.json  input4_stack.json.asm.json  input5.txt  input5_stack.json  input5_stack.json.asm.json  input6.txt  input6_stack.json  input6_stack.json.asm.json  input7.txt  input7_stack.json  input7_stack.json.asm.json  input8.txt  input8_stack.json
frontend/: .env  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
frontend/.next/: trace  trace-build
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: grammar-panel.tsx  memory-visualizer.tsx
frontend/src/: App.tsx  (+1 more)
inputs/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
outputs/: a.out  input_1.s  input_2.s  input_3.s  input_4.s  input_5.s
(+92 files in other folders)
